Todoy/src/features/tasks/tasksStyles.css
#root {
  --border-height: 1px;
  --task-height: 34px;
}

.homePage-taskItem-task {
  transition: none;
  position: relative;
  box-sizing: border-box;
  display: flex;
  gap: 8px;
  height: var(--task-height);
  min-height: var(--task-height);
  max-height: var(--task-height);
  align-items: center;
  width: calc(100%);
  padding-left: 24px;
  overflow: visible;
  background-size: 0%;
  background-repeat: no-repeat;
  &:first-child {
    margin-top: calc(var(--border-height));
  }
  & .task-button:last-child {
    margin-left: auto;
    padding-right: 32px;
  }
  &::before, 
  &::after {
    content: '';
    position: absolute;
    inset: 0;
    left: 24px;
    width: calc(100% - 24px - 24px);
    height: var(--border-height);
    transition: none;
    z-index: 0;
    background-color: var(--color-line);
  }
  &::before{
    top: calc((0px - var(--border-height) / 2));
  }
  &::after{
    top: calc((var(--task-height) - var(--border-height) / 2));
  }
  &:hover {
    background-color: var(--color-background-enphasis);
    &::after,
    &::before {
      transition: none;
      width: 100%;
      left: 0;
    }
    & .task-title {
      border: 1px solid var(--color-line);
    }
  }
  &.selected {
    &::after,
    &::before {
      background-color: var(--color-line-accent);
      width: 100%;
      left: 0;
      z-index: 5;
    }
    &:hover {
      background-color: transparent;
    }
  }
  &.done {
    background-size: 100%;
    transition: background-size 0.3s ease-in-out;
    background-image: var(--color-background-done-gradient);
    animation: taskDone 0.75s forwards;
    &.special{
      background-image: var(--color-background-superDone-gradient);
    }
    &::after,
    &::before {
      transition: none;
      background-color: var(--color-line);
      width: 100%;
      left: 0;
    }
    &::after {
      transform: translateY(-34px);
      transition: all 0.3s ease-out 0.55s;
    }
    &.selected::after,
    &.selected::before {
      background-color: var(--color-line-accent);
    }
  }
  &.undone {
  animation: taskUndone 0.35s forwards;
  &::after,
  &::before {
    transition: none;
    background-color: var(--color-line);
    width: 100%;
    left: 0;
  }
  &::after {
    transform: translateY(-34px);
    transition: all 0s ease-out 0.35s;
  }
  &.selected::after,
  &.selected::before {
    background-color: var(--color-line-accent);
  }
}
}

@keyframes taskDone {
  0% {
    z-index: 5;
  }
  73% {
    height: var(--task-height);
    min-height: var(--task-height);
    max-height: var(--task-height);
    opacity: 1;
    z-index: 5;
  }
  95% {
    opacity: 0;
  }
  100% {
    z-index: 5;
    height: 0px;
    max-height: 0px;
    min-height: 0px;
    opacity: 0;
    display: none;
  }
}

@keyframes taskUndone {
  0% {
    height: var(--task-height);
    min-height: var(--task-height);
    max-height: var(--task-height);
    opacity: 1;
    z-index: 5;
  }
  50% {
    opacity: 0;
  }
  100% {
    z-index: 5;
    height: 0px;
    max-height: 0px;
    min-height: 0px;
    opacity: 0;
    display: none;
  }
}

.task-title {
  border: 1px solid transparent;
  padding: 1px;
  margin-bottom: 1px;
  border-radius: 4px;
  outline: none;
  overflow: hidden;
  display: block;
  text-overflow: ellipsis; 
  width: 100%;
  transition: none;
  &:hover {
    border: 1px solid var(--color-line-hover) !important;
  }
  &.selected {
    border-color: transparent !important;
  }
}

